2000-08-11  Peter Williams  <peterw@helixcode.com>

	* mail-threads.c (mail_op_forward_event): New function that
	writes a FORWARD_EVENT signal to the compipe, to allow Camel
	events to be handled in the main thread.
	(read_msg): Handle a FORWARD_EVENT.

	* mail-callbacks.c (select_first_unread): Forward the
	event into the main thread to prevent the GTK calls in the
	dispatcher thread. 
	(main_select_first_unread): New name of old select_first_unread.

	* message-list.c (folder_changed): Same as above.
	(main_folder_changed): Same as above.
	(message_changed): Same as above.
	(main_message_changed): Same as above.


	* mail-format.c (free_byte_array): Note about using
	mail_op_forward_event. (cmm_destroyed): Same.

2000-08-11  Dan Winship  <danw@helixcode.com>

	* message-list.c (message_list_select): If the caller passes "-1"
	for the model row, translate that to view row 0.

	* message-list.c (idle_select_row): 
	* mail-callbacks.c (select_first_unread): Use new
	message_list_select kludge^H^H^H^H^H^Hfeature

2000-08-11  JP Rosevear  <jpr@helixcode.com>

	* mail-config-gui.c (source_dialog): Allow the window
	to be growable

	* mail-config.c: use void in empty declarations

2000-08-11  Peter Williams  <peterw@helixcode.com>

	* mail-config.c (mail_config_get_news): Change () to (void)
	if a function takes no arguments.
	
	* mail-config.h: Prototype mail_config_get_{sources,news}x

2000-08-11  JP Rosevear  <jpr@helixcode.com>

	* mail-config-gui.c (identity_dialog): iddialog, not sdialog
	(news_edit_clicked): Kill leftover c-p crud

2000-08-11  JP Rosevear  <jpr@helixcode.com>

	* mail-config-gui.c (news_edit_clicked): Check nrow, not srow.

2000-08-11  JP Rosevear  <jpr@helixcode.com>

	* mail-config-gui.c (service_acceptable): Use camel_object_unref
	instead of gtk_object_unref
	(mail_druid_finish): Use new config accessors
	(mail_config_druid): No need to call config functions
	(news_add_clicked): Increments maxnrow, not maxsrow